--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,27 +1,31 @@
 {
-  "name": "core",
+  "name": "astro-satori",
   "version": "0.0.1",
-  "description": "",
-  "main": "dist/index.js",
+  "description": "This Astro integration brings satori to your Astro project.",
+  "type": "module",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
-  "exports": {
-    "require": "./dist/index.js",
-    "import": "./dist/index.mjs"
+  "exports": "./dist/index.mjs",
+  "engines": {
+    "node": ">=16.0.0"
   },
-  "bin": {
-    "core-cli": "dist/bin/index.js"
-  },
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "build-fast": "tsup index.ts bin/index.ts --format cjs,esm --dts",
-    "build": "pnpm run build-fast -- --dts-resolve"
+    "build:debug": "tsup --config tsup.config.ts",
+    "build": "tsup"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "keywords": ["astro", "satori", "open-graph", "og", "integration"],
+  "author": "nemurubaka",
+  "license": "MIT",
   "devDependencies": {
     "@types/node": "^18.11.18",
+    "astro": "^2.0.10",
     "tsup": "^6.5.0",
     "typescript": "^4.9.5"
+  },
+  "dependencies": {
+    "satori": "^0.2.3"
   }
 }
