--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -1,15 +1,23 @@
 {
-  "name": "playground",
-  "version": "0.0.1",
-  "description": "",
-  "main": "index.js",
+  "name": "@example/with-markdown-plugins",
+  "type": "module",
+  "version": "0.0.2",
+  "private": true,
   "scripts": {
-    "print": "core-cli --name haha --age 40"
+    "dev": "astro dev",
+    "start": "astro dev",
+    "build": "astro build",
+    "preview": "astro preview",
+    "astro": "astro"
   },
-  "keywords": [],
-  "author": "",
-  "devDependencies": {
-    "core": "workspace:*"
-  },
-  "license": "ISC"
+  "dependencies": {
+    "astro": "^2.0.10",
+    "astro-satori": "workspace:*",
+    "@astrojs/markdown-remark": "^2.0.1",
+    "hast-util-select": "5.0.1",
+    "rehype-autolink-headings": "^6.1.1",
+    "rehype-slug": "^5.0.1",
+    "rehype-toc": "^3.0.2",
+    "remark-code-titles": "^0.1.2"
+  }
 }
