--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -2,6 +2,7 @@
   "name": "astro-satori",
   "version": "0.0.1",
   "description": "This Astro integration brings satori to your Astro project.",
+  "private": false,
   "type": "module",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
