--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "astro-satori",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "This Astro integration brings satori to your Astro project.",
   "private": false,
   "type": "module",
@@ -19,6 +19,8 @@
   },
   "keywords": [
     "astro",
+    "astro-integration",
+		"astro-component",
     "satori",
     "open-graph",
     "og",
