--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@example/with-markdown-plugins",
+  "name": "playground",
   "type": "module",
   "version": "0.0.2",
   "private": true,
