--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "astro-satori",
-  "version": "0.0.2",
+  "version": "0.1.0",
   "description": "This Astro integration brings satori to your Astro project.",
   "private": false,
   "type": "module",
@@ -20,7 +20,7 @@
   "keywords": [
     "astro",
     "astro-integration",
-		"astro-component",
+    "astro-component",
     "satori",
     "open-graph",
     "og",
@@ -35,6 +35,8 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "gray-matter": "^4.0.3",
+    "kleur": "^4.1.5",
     "satori": "^0.2.3"
   }
 }
