refactor: use `url-join` to join url

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -43,6 +43,7 @@
   "dependencies": {
     "gray-matter": "^4.0.3",
     "kleur": "^4.1.5",
-    "satori": "^0.2.3"
+    "satori": "^0.2.3",
+    "url-join": "^5.0.0"
   }
 }
